// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Card Rendering] renders Horizontal without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__row rcx-css-127j9mz"
      >
        <div
          class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-document-eye rcx-icon rcx-css-f8dsuo"
          >
            
          </i>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
        >
          <h3
            class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
          >
            Heading 3
            <span
              class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
            >
              <span
                hidden=""
              >
                Card info here
              </span>
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
                title="Card info here"
              >
                
              </i>
            </span>
          </h3>
          <div
            class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
          >
            Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium voluptatem rem praesentium earum ut consectetur.
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <button
          class="rcx-box rcx-box--full rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
        <button
          class="rcx-box rcx-box--full rcx-button--primary rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
        <span
          class="rcx-box rcx-box--full rcx-badge rcx-badge--primary rcx-badge--small"
        />
        <span
          class="rcx-box rcx-box--full  rcx-tag "
        >
          <span
            class="rcx-tag__inner"
          >
            Tag
          </span>
        </span>
        <button
          aria-label="menu"
          class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders HorizontalCustom without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__row rcx-css-127j9mz"
      >
        <div
          class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
        >
          <figure
            class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x36"
          >
            <img
              alt="avatar"
              class="rcx-avatar__element rcx-avatar__element--x36"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
            />
          </figure>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
        >
          <div
            class="rcx-box rcx-box--full rcx-card__header rcx-css-1wuw1zw"
          >
            <h4
              class="rcx-box rcx-box--full rcx-card__title rcx-css-kzed8v"
            >
              Heading 3
            </h4>
            <span
              class="rcx-box rcx-box--full  rcx-tag rcx-tag--featured"
            >
              <span
                class="rcx-tag__inner"
              >
                Header tag
              </span>
            </span>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
          >
            Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium rem praesentium earum ut consectetur.
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <span
          class="rcx-box rcx-box--full rcx-badge rcx-badge--primary rcx-badge--small"
        />
        <span
          class="rcx-box rcx-box--full  rcx-tag "
        >
          <span
            class="rcx-tag__inner"
          >
            Card tag
          </span>
        </span>
        <button
          aria-label="menu"
          class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders HorizontalNoAction without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__row rcx-css-127j9mz"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-document-eye rcx-icon rcx-css-f8dsuo"
        >
          
        </i>
        <div
          class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
        >
          <h3
            class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
          >
            Heading 3
          </h3>
          <div
            class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
          >
            Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium voluptatem rem praesentium earum ut consectetur.
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders HorizontalNoIcon without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <h3
          class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
        >
          Heading 3
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
            >
              Card info here
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="Card info here"
            >
              
            </i>
          </span>
        </h3>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium voluptatem rem praesentium earum ut consectetur.
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <span
          class="rcx-box rcx-box--full rcx-badge rcx-badge--primary rcx-badge--small"
        />
        <span
          class="rcx-box rcx-box--full  rcx-tag "
        >
          <span
            class="rcx-tag__inner"
          >
            Card tag
          </span>
        </span>
        <button
          aria-label="menu"
          class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders Title h4 without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <h4
          class="rcx-box rcx-box--full rcx-card__title rcx-css-kzed8v"
        >
          Heading 4
        </h4>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium voluptatem rem praesentium earum ut consectetur.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders Title h5 without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__horizontal rcx-card rcx-css-167oyqf"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <h5
          class="rcx-box rcx-box--full rcx-card__title rcx-css-1fiir1q"
        >
          Heading 5
        </h5>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium voluptatem rem praesentium earum ut consectetur.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders Vertical without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__vertical rcx-card rcx-css-wufm31"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <div
          class="rcx-box rcx-box--full rcx-card__header rcx-css-1wuw1zw"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-address-book rcx-icon rcx-css-f8dsuo"
          >
            
          </i>
          <h3
            class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
          >
            Heading 3
            <span
              class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
            >
              <span
                hidden=""
              >
                Heading info
              </span>
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
                title="Heading info"
              >
                
              </i>
            </span>
          </h3>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium rem praesentium earum ut consectetur. Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium rem praesentium earum ut consectetur.
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <button
          class="rcx-box rcx-box--full rcx-button--primary rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
        <button
          class="rcx-box rcx-box--full rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders VerticalCustom without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__vertical rcx-card rcx-css-wufm31"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <div
          class="rcx-box rcx-box--full rcx-card__header rcx-css-1wuw1zw"
        >
          <figure
            class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x36"
          >
            <img
              alt="avatar"
              class="rcx-avatar__element rcx-avatar__element--x36"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAAAAcEBgIDBQj/xAAuEAACAQQAAwcEAQUAAAAAAAABAgMABAUREiExBhMUIkFRYQcWcYGhFTJSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAACAwQBAP/EAB4RAAIBBQEBAQAAAAAAAAAAAAABAgMREiExE0HR/9oADAMBAAIRAxEAPwBuXuIkhBuMe5ib/AHQP49q4L3mLitryTLTSpOiHQI5k/HzXa/qbFOEudVTu1dumWvcTaNCZYZ7vU6g6LxqjOU/24dfs1Ouh9FnkMpd3Reeyx83hAxZZEhkdV9/MBrX71WGPvJcqrJBGveKATtuXXqNU0pu02bTHXD/AGvJAluyxxRd6F4x00o+NdKoVrjbzJdvVe1t5cVLc2ck8qjnohgpPtz2v7G6JtPQ2VJwjlcw+37mchpnK6GtIuv5NFWeTsLNPvxWTvpfjvOEfwKKzEVkSct2vscS/BIzSN0YRkeX81UpPqO8masJETu7OOccY4dswYFQeftv096XV5knuJGdm2T1+agvMXj8jEaHX905QihabvcbuS7X566mLWLwSY8PuRnk/u4eZ0deTl71Ef6hY+0yM88TzeNZY4luYwpVYyduOfrvhPTnr0pXSX9y5mCsyJMdyxxvwq599em+taItqCSNc90ChvZRUruUcT0JiO18Elpk7t8v41LWzacxkBSuvjQ/FFJayjDWrCTepAQ2vUH0oo/Jk3ovpwJJeVCP5CN+lFFaaMqy+nAyuChvrTI2kN9JAsi2ZOy4IBHMnkSCP+iqBexSWdxLazoUljJVlPUH2oorkV10pRc7b1zXb/hZOzuJvM86QWEXeELxOzHSIPcmiiiunVlF2RNTpRkrs//Z"
            />
          </figure>
          <h3
            class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
          >
            Heading 3
          </h3>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          <div
            class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
          >
            <ul>
              <li>
                Lorem ipsum dolor sit amet.
              </li>
              <li>
                In adipisci consequatur qui laudantium rem praesentium earum ut.
              </li>
              <li>
                Consectetur.
              </li>
            </ul>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
          >
            <ul>
              <li>
                Lorem ipsum dolor sit amet.
              </li>
              <li>
                In adipisci consequatur qui laudantium rem praesentium earum ut.
              </li>
              <li>
                Consectetur.
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <button
          class="rcx-box rcx-box--full rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Card Rendering] renders VerticalNoIcon without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-card__vertical rcx-card rcx-css-wufm31"
    >
      <div
        class="rcx-box rcx-box--full rcx-card__col rcx-css-1tbw8nv"
      >
        <div
          class="rcx-box rcx-box--full rcx-card__header rcx-css-1wuw1zw"
        >
          <h3
            class="rcx-box rcx-box--full rcx-card__title rcx-css-10z9mkx"
          >
            Heading 3
          </h3>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-card__body rcx-css-1h0kzgh"
        >
          Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium rem praesentium earum ut consectetur. Lorem ipsum dolor sit amet. In adipisci consequatur qui laudantium rem praesentium earum ut consectetur.
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-card__controls rcx-css-14l8sh3"
      >
        <button
          class="rcx-box rcx-box--full rcx-button"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            Button
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;
